# generate-project-summary

./: .gitignore  README.md  generate-project-summary.code-workspace  generate_project_summary.py  pyproject.toml
.github/workflows/: python-package.yml
generate_project_summary/: ignore_patterns.py  main.py  progress.py  summarizer.py
src/: generate_project_summary.py  main.py
tests/: conftest.py  test_main.py  test_progress.py  test_summarizer.py
